--- a/front-end/navbar/navbar.html
+++ b/front-end/navbar/navbar.html
@@ -16,7 +16,7 @@
             <i class="fa fa-bars fa-2x"></i>
           </div>
           <div class="logo">
-            LOGO
+            Lisa Holloway
           </div>
           <div class="menu">
             <ul>
@@ -30,11 +30,9 @@
       </header>
 
       <div class="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vulputate tristique dignissim. Cras tincidunt elit at dapibus varius. Mauris mollis nibh ut mi suscipit, id viverra massa bibendum. Donec venenatis velit eget faucibus pellentesque. Etiam sit amet consequat mi, in viverra mauris. Vivamus cursus dui a ultrices egestas. Nunc ligula odio, tincidunt eget scelerisque quis, cursus et erat.</p>
+        <h2 id="about-lisa">Get to know...</h2>
 
-        <p> Sed rhoncus neque volutpat elit molestie lobortis. Proin interdum erat condimentum, facilisis metus eget, efficitur lacus. Phasellus sed tellus ac elit tincidunt consequat vitae nec arcu. In nibh nunc, vestibulum nec bibendum in, dictum vel arcu. In congue metus a lacinia laoreet. Sed ornare risus et lacus porttitor lacinia. Aenean condimentum blandit elit eget condimentum. Cras malesuada non turpis volutpat tempor. Suspendisse tempus justo orci, malesuada porta est dignissim eu. Fusce in quam enim. Suspendisse consequat nisi mi, id rhoncus libero lobortis quis.</p>
-
-        <p> Suspendisse enim nisi, varius ac aliquet in, finibus vitae enim. Praesent sodales euismod mi, id dictum eros fringilla vel. Nulla nisi elit, tempor vitae ante sed, tincidunt sagittis libero. Fusce tincidunt a elit sed posuere. Proin maximus felis in rhoncus imperdiet. Aliquam eget mauris varius, tincidunt odio a, mattis purus. Phasellus a pulvinar arcu. Maecenas lacus nisl, gravida ac condimentum in, consequat non velit. Fusce aliquet ullamcorper orci, sit amet volutpat enim elementum sit amet. Donec vel purus lacus. Vestibulum eu sollicitudin elit, non tincidunt leo. Donec porta consequat nisi, et luctus elit pretium nec. Nunc tincidunt nulla non diam commodo, sit amet blandit justo mollis. Cras pulvinar lacinia tellus.</p>
+        <p> I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. I have a particular passion for color and specialize in  balayage, custom colors, color correction and brazilian blowouts.  If it's natural  & beautiful gray coverage you want, if you are looking to change your style or if you are wanting to stay on top of current fashion trends or simply tired of bad hair days then come see me! There is no reason not to have a cut and/or color that you love! I offer immaculate cuts for all types of hair whether it's coarse, thin, curly, long or short!  I am great with men’s cut and color as well and I believe in creating an atmosphere that caters to the comfort of my male clients as well as women.</p>
       </div>
 
     <script type="text/javascript">
