--- a/front-end/navbar/navbar.html
+++ b/front-end/navbar/navbar.html
@@ -32,8 +32,10 @@
       <div class="content">
         <h2 id="about-lisa">Get to know...</h2>
 
-        <p> I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. I have a particular passion for color and specialize in  balayage, custom colors, color correction and brazilian blowouts.  If it's natural  & beautiful gray coverage you want, if you are looking to change your style or if you are wanting to stay on top of current fashion trends or simply tired of bad hair days then come see me! There is no reason not to have a cut and/or color that you love! I offer immaculate cuts for all types of hair whether it's coarse, thin, curly, long or short!  I am great with men’s cut and color as well and I believe in creating an atmosphere that caters to the comfort of my male clients as well as women.</p>
-      </div>
+        <ul class="nav">
+          <li><a href="#">I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. I have a particular passion for color and specialize in  balayage, custom colors, color correction and brazilian blowouts.  If it's natural  & beautiful gray coverage you want, if you are looking to change your style or if you are wanting to stay on top of current fashion trends or simply tired of bad hair days then come see me! There is no reason not to have a cut and/or color that you love! I offer immaculate cuts for all types of hair whether it's coarse, thin, curly, long or short!  I am great with men’s cut and color as well and I believe in creating an atmosphere that caters to the comfort of my male clients as well as women.</a></li>
+
+        </ul>
 
     <script type="text/javascript">
 
