layout with picture and text

--- a/front-end/navbar/navbar.html
+++ b/front-end/navbar/navbar.html
@@ -29,16 +29,58 @@
         </nav>
       </header>
 
-      <div class="content">
-        <h2 id="about-lisa">Get to know...</h2>
+      <section class="customer-testimonals-container">
+        <h3 id="customer-testimonals-id">Customer Testimonals</h3>
 
-        <ul class="nav">
-          <li><a>I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. I have a particular passion for color and specialize in  balayage, custom colors, color correction and brazilian blowouts.  If it's natural  & beautiful gray coverage you want, if you are looking to change your style or if you are wanting to stay on top of current fashion trends or simply tired of bad hair days then come see me! There is no reason not to have a cut and/or color that you love! I offer immaculate cuts for all types of hair whether it's coarse, thin, curly, long or short!  I am great with men’s cut and color as well and I believe in creating an atmosphere that caters to the comfort of my male clients as well as women.</a></li>
-        </ul>
+        <div class="row">
+
+          <div class="column" >
+            <p>I have been going to Lisa for years after discovering her when I first moved to Seattle. Every haircut and color has been perfect. I leave feeling great and she always finds a way to create a style that grows out well. In addition, she is always happy to try new things that I bring her on a whim (purple hair) and it always ends up looking professional and stylish.
+
+            I absolutely adore her and cannot imagine going anywhere else.</p>
+            <h2> - Lea D.</h2>
+
+          </div>
+
+
+          <div class="column" >
+            <p>I have been going to Lisa for years and I cannot express enough how incredible she is. She has been my saving grace. She's honest, professional and incredibly patient. Whenever I have a friend who is keen on looking for a new hairstylist I immediately encourage them to book an appointment. Been loyal for years and will continue to see her every chance I get.</p>
+            <h2> - Amalia F</h2>
+
+          </div>
+
+          <div class="column" >
+            <p>Lisa is the best!  After moving back to Seattle from a 3-year stint in California, I was on the hunt for a regular stylist who could deal with my thick, wavy, totally out-of-control hair.  Lisa not only managed to give me the cut I wanted, she often made suggestions and changes I would not have thought of that transformed my unruly mushroom hair into a sophisticated, flattering shape.  I receive compliments galore after Lisa cuts my hair - and her price is unbelievably reasonable for her level of expertise.  Plus, she's down to earth, hilarious and fun to talk to.  If you too are searching for a regular stylist who won't let you down, don't hesitate to book an appointment</p>
+            <h2> - Kim T.</h2>
+          </div>
+        </div>
+      </section>
+
+
+
+      <h2 id="about-lisa">Get to know...</h2>
+
+      <div class="lisa-introduction">  I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all.</div>
+      <img class="lisa-image" style="vertical-align:middle" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg">
+
+
 
     <script type="text/javascript">
 
 
+// code paste it back in
+    // <h2 id="about-lisa">Get to know...</h2>
+    // <div class="lisa-description">
+    //   I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all.
+    //   <img class="lisa-image" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg" >
+    // </div>
+
+
+
+
+    // <ul class="nav">
+    //   <li><a>I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all. </a></li>
+    // </ul>
     // menu toggle-button
       $(document).ready(function () {
         $(".menu-icon").on("click", function () {
