--- a/front-end/navbar/navbar.html
+++ b/front-end/navbar/navbar.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </script>
   </head>
-  <body>
+  <body class="page-wrap">
     <div class="wrapper"> </div>
       <header>
         <nav>
@@ -58,22 +58,34 @@
 
 
 
-      <h2 id="about-lisa">Get to know...</h2>
+      <!-- <h2 id="about-lisa">Get to know...</h2>
 
       <div class="lisa-introduction">  I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all.</div>
-      <img class="lisa-image" style="vertical-align:middle" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg">
+      <img class="lisa-image" style="vertical-align:middle" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg"> -->
 
+
+      <div id="container">
+         <div id="body"></div>
+         <div class="">
+           isahollowaystylist@gmail.com salon voicemail: 2056-450-5120
+         </div>
+
+         <div id="footer">salon voicemail: 2056-450-5120
+           ​Located inside the Mosaic Salon & Spa suites
+
+Parking Garage is located between 20th & Market St.  Look for the flashing crosswalk sign</div>
+      </div>
 
 
     <script type="text/javascript">
 
 
 // code paste it back in
-    // <h2 id="about-lisa">Get to know...</h2>
-    // <div class="lisa-description">
-    //   I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all.
-    //   <img class="lisa-image" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg" >
-    // </div>
+//     <h2 id="about-lisa">Get to know...</h2>
+//     <div class="lisa-description">
+//       I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all.
+//       <img class="lisa-image" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg" >
+//     </div>
 
 
 
@@ -98,15 +110,8 @@
           $('nav').removeClass('black')
         }
       })
-
-
-
-
-
-
-
-
-
     </script>
+
+
   </body>
 </html>
