--- a/front-end/navbar/navbar.html
+++ b/front-end/navbar/navbar.html
@@ -56,43 +56,39 @@
         </div>
       </section>
 
+      <h2 id="about-lisa">Get to know...</h2>
 
 
-      <!-- <h2 id="about-lisa">Get to know...</h2>
 
-      <div class="lisa-introduction">  I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all.</div>
-      <img class="lisa-image" style="vertical-align:middle" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg"> -->
+      <br/><br/><br/>
+
+      <!-- Case 2) image height is bigger than text height -->
+      <div class="information-container">
+        <img class="img-valign" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg" alt="" />
+        <span class="text2">I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all.</span> 
+      </div>
+
+
+
+
 
 
       <div id="container">
          <div id="body"></div>
          <div class="">
-           isahollowaystylist@gmail.com salon voicemail: 2056-450-5120
+           Lisahollowaystylist@gmail.comsalon voicemail: 2056-450-5120
          </div>
-
          <div id="footer">salon voicemail: 2056-450-5120
            ​Located inside the Mosaic Salon & Spa suites
 
-Parking Garage is located between 20th & Market St.  Look for the flashing crosswalk sign</div>
+          Parking Garage is located between 20th & Market St.  Look for the flashing crosswalk sign
+        </div>
       </div>
 
 
     <script type="text/javascript">
+    <!--
 
-
-// code paste it back in
-//     <h2 id="about-lisa">Get to know...</h2>
-//     <div class="lisa-description">
-//       I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all.
-//       <img class="lisa-image" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg" >
-//     </div>
-
-
-
-
-    // <ul class="nav">
-    //   <li><a>I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all. </a></li>
-    // </ul>
     // menu toggle-button
       $(document).ready(function () {
         $(".menu-icon").on("click", function () {
@@ -111,6 +107,25 @@ Parking Garage is located between 20th & Market St.  Look for the flashing cross
         }
       })
     </script>
+
+    <!-- // <div class="lisa-introduction">  I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all.</div>
+    // <img class="lisa-image" style="vertical-align:middle" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg"> -->
+
+
+
+<!-- // code paste it back in
+//     <h2 id="about-lisa">Get to know...</h2>
+//     <div class="lisa-description">
+//       I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all.
+//       <img class="lisa-image" src="https://s3-media1.fl.yelpcdn.com/bphoto/fsLijpWoOjiQ4Ri1x3yDUg/o.jpg" >
+//     </div> -->
+
+
+
+
+    <!-- // <ul class="nav">
+    //   <li><a>I believe beauty comes from within. I also believe everyone can have beautiful hair that suits their lifestyle & personality. Specialize in balayage, custom color correction and brazilian blowouts. I believe all genders, orientation and affiliations to find my professional and calming atmosphere caters to all. </a></li>
+    // </ul> -->
 
 
   </body>
