--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-fade fixed-top">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Lisa Holloway</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,74 +21,60 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">link 2</a>
+            <a class="nav-link" href="#">Services</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Booking</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+
       </div>
     </nav>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-3">Fluid jumbotron</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-      </div>
-    </div>
+
 
     <section class="module parallax parallax-1" data-type="background" data-speed="10">
       <div class="parallax-container">
-        <h1>Motion</h1>
+        <h1>Lisa Holloway</h1>
+        <h3 style="text-align: center">Professional Hair Stylist</h3>
       </div>
     </section>
 
     <section  class="module content">
       <div class="parallax-container">
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor...</p>
+        <!-- <h2>Client Testimonals</h2> -->
+        <p> "I have been going to Lisa for years after discovering her when I first moved to Seattle. Every haircut and color has been perfect. I leave feeling great and she always finds a way to create a style that grows out well. In addition, she is always happy to try new things that I bring her on a whim... and it always ends up looking professional and stylish.
+
+        I absolutely <strong>adore her</strong> and cannot imagine going anywhere else."</p>
+        <div style="text-align: center">
+          - Lisa D
+        </div>
       </div>
     </section>
 
-    <section class="module parallax parallax-2" data-type="background" data-speed="10">
-      <div class="parallax-container">
-        <h1>Shape</h1>
+    <!-- services and booking -->
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="http://placeimg.com/640/360/any" alt="services-image">
+      <div class="card-body">
+        <h3 class="card-title">Services</h3>
+        <a href="#" class="btn btn-primary">Browse Services</a>
       </div>
-    </section>
+    </div>
 
-    <section class="module content">
-      <div class="parallax-container">
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor...</p>
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="http://placeimg.com/640/360/any" alt="services-image">
+      <div class="card-body">
+        <h3 class="card-title">Booking</h3>
+        <a href="#" class="btn btn-primary">Book Now</a>
       </div>
-    </section>
+    </div>
 
-    <section class="module parallax parallax-3" data-type="background" data-speed="10">
-      <div class="parallax-container">
-        <h1>Color</h1>
-      </div>
-    </section>
-
-    <section class="module content">
-      <div class="parallax-container">
-        <h2>Lorem Ipsum Dolor</h2>
-        <p>Lorem ipsum dolor...</p>
-      </div>
-    </section>
+    <!-- end of services and booking  -->
 
     <!-- footer -->
     <footer class="footer">
