footer right color

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -78,15 +78,15 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="container-fluid bg-primary">
+      <div class="container-fluid ">
         <div class="row">
           <div class="col-xs-6 col-md-4 left">
-            <p>&copy; MySite.com</p>
+            <p>&copy; 2018 by amaliaclaire</p>
           </div>
 
           <div class="col-xs-6 col-md-4 left">
-            <a href="#">Terms &amp;Conditions</a>
-            <a href="#">About Us</a>
+            <a href="#">icon</a>
+            <a href="#">icon</a>
           </div>
 
           <div class="col-xs-6 col-md-4 right">
