moving gallery added with stok photos

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -53,83 +53,110 @@
       </div>
     </section>
 
-    <section  class="module content">
-      <div class="parallax-container">
-        <!-- <h2>Client Testimonals</h2> -->
-        <p> "I have been going to Lisa for years after discovering her when I first moved to Seattle. Every haircut and color has been perfect. I leave feeling great and she always finds a way to create a style that grows out well. In addition, she is always happy to try new things that I bring her on a whim... and it always ends up looking professional and stylish.
 
-        I absolutely <strong>adore her</strong> and cannot imagine going anywhere else."</p>
-        <div style="text-align: center">
-          - Lisa D
-        </div>
-      </div>
-    </section>
 
   </br>
     </br>
       </br>
-        </br>
-    <!-- services and bookings -->
+    </br>
+    <section>
+      <div class="" style="text-align: center">
+        Hair Gallery
+      </div>
+    </section>
+    <!-- photo gallery -->
 
-    <!-- Grid row -->
-<div class="row">
+    <!--Carousel Wrapper-->
+    <div id="multi-item-example" class="carousel slide carousel-multi-item carousel-multi-item-2" data-ride="carousel">
 
-    <!-- Grid column -->
-    <div class="col-md-12 d-flex justify-content-center mb-5">
+        <!--Controls-->
+        <div class="controls-top">
+            <a class="black-text" href="#multi-item-example" data-slide="prev"><i class="fa fa-angle-left fa-3x pr-3"></i></a>
+            <a class="black-text" href="#multi-item-example" data-slide="next"><i class="fa fa-angle-right fa-3x pl-3"></i></a>
+        </div>
+        <!--/.Controls-->
 
-        <button type="button" class="btn btn-outline-black waves-effect filter" data-rel="all">All</button>
-        <button type="button" class="btn btn-outline-black waves-effect filter" data-rel="1">Mountains</button>
-        <button type="button" class="btn btn-outline-black waves-effect filter" data-rel="2">Sea</button>
+        <!--Slides-->
+        <div class="carousel-inner" role="listbox">
+
+            <!--First slide-->
+            <div class="carousel-item active">
+
+                <div class="col-md-3 mb-3">
+                    <div class="card">
+                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(38).jpg" alt="Card image cap">
+                    </div>
+                </div>
+
+                <div class="col-md-3 mb-3">
+                    <div class="card">
+                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(19).jpg" alt="Card image cap">
+                    </div>
+                </div>
+
+                <div class="col-md-3 mb-3">
+                    <div class="card">
+                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(42).jpg" alt="Card image cap">
+                    </div>
+                </div>
+
+                <div class="col-md-3 mb-3">
+                    <div class="card">
+                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(8).jpg" alt="Card image cap">
+                    </div>
+                </div>
+
+            </div>
+            <!--/.First slide-->
+
+            <!--Second slide-->
+            <div class="carousel-item">
+
+                <div class="col-md-3 mb-3">
+                    <div class="card">
+                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(53).jpg" alt="Card image cap">
+                    </div>
+                </div>
+
+                <div class="col-md-3 mb-3">
+                    <div class="card">
+                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(25).jpg" alt="Card image cap">
+                    </div>
+                </div>
+
+                <div class="col-md-3 mb-3">
+                    <div class="card">
+                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(47).jpg" alt="Card image cap">
+                    </div>
+                </div>
+
+                <div class="col-md-3 mb-3">
+                    <div class="card">
+                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(26).jpg" alt="Card image cap">
+                    </div>
+                </div>
+
+            </div>
+            <!--/.Second slide-->
+
+        </div>
 
     </div>
-    <!-- Grid column -->
+    <!--/.Carousel Wrapper-->
 
-</div>
-<!-- Grid row -->
+  <!-- photo gallery -->
 
-<!-- Grid row -->
-<div class="gallery" id="gallery">
+  <section  class="module content">
+    <div class="parallax-container">
+      <!-- <h2>Client Testimonals</h2> -->
+      <p> "I have been going to Lisa for years after discovering her when I first moved to Seattle. Every haircut and color has been perfect. I leave feeling great and she always finds a way to create a style that grows out well. In addition, she is always happy to try new things that I bring her on a whim... and it always ends up looking professional and stylish.
 
-    <!-- Grid column -->
-    <div class="mb-3 pics animation all 2">
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(73).jpg" alt="Card image cap">
+      I absolutely <strong>adore her</strong> and cannot imagine going anywhere else."</p>
+      <div style="text-align: center">
+        - Lisa D
+      </div>
     </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="mb-3 pics animation all 1">
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Vertical/mountain1.jpg" alt="Card image cap">
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="mb-3 pics animation all 1">
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Vertical/mountain2.jpg" alt="Card image cap">
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="mb-3 pics animation all 2">
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(35).jpg" alt="Card image cap">
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="mb-3 pics animation all 2">
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(18).jpg" alt="Card image cap">
-    </div>
-    <!-- Grid column -->
-
-    <!-- Grid column -->
-    <div class="mb-3 pics animation all 1">
-        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Vertical/mountain3.jpg" alt="Card image cap">
-    </div>
-    <!-- Grid column -->
-
-</div>
-<!-- Grid row -->
-
-    <!-- end services and bookings -->
+  </section>
   </br>
     </br>
       </br>
