--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -10,7 +10,14 @@
     <link rel="stylesheet" href="landing-page.css">
 
     <!-- MDB CSS -->
-    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="css/mdb.min.css" rel="stylesheet">
+    <!-- Your custom styles (optional) -->
+    <link href="css/style.css" rel="stylesheet">
+      <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
@@ -162,6 +169,50 @@
       </br>
         </br>
 
+        <!-- contact section -->
+        <section class="contact">
+          <h1 style="text-align:center">Get In Touch</h1>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <i class="fa fa-address-book" aria-hidden="true"></i>
+                address
+                <div>
+                  5400 Leary Avenue Northwest, Suite 18, Seattle, Washington 98107, United States
+                </div>
+              </div>
+              <div class="col-sm">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                phone
+                <div>
+​                 206-450-5120
+                </div>
+              </div>
+              <div class="col-sm">
+                <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
+                email
+                <div>
+                  lisahollowayStylist@gmail.com
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- end of contact section -->
+
+      </br>
+        </br>
+          </br>
+            </br>
+          </br>
+            </br>
+              </br>
+                </br>
+              </br>
+                </br>
+                  </br>
+                    </br>
+
 
 
     <!-- footer -->
@@ -172,10 +223,7 @@
             <p>&copy; 2018 by amaliaclaire</p>
           </div>
 
-          <div class="col-xs-6 col-md-4 left">
-            <a href="#">icon</a>
-            <a href="#">icon</a>
-          </div>
+    
 
           <div class="col-xs-6 col-md-4 right">
             <a href="#" class="btn btn-social-icon btn-twitter">
@@ -201,6 +249,13 @@
 
 
     <!--MDB javascript  -->
+      <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="js/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
