navbar elements are centered and spaced

--- a/front-end/navbar/navbar.html
+++ b/front-end/navbar/navbar.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="navbar.css">
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/master.css">
     </script>
   </head>
   <body class="page-wrap">
