added card that is testiomals draft

--- a/front-end/test.html
+++ b/front-end/test.html
@@ -1,19 +1,93 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>test</title>
-    <link rel="stylesheet" href="test.css">
-  </head>
-  <body>
-    <h1>test</h1>
-    <div id="header">
-         <div id="logo_title">
-            <p style="text-color: pink"> What's Playing? </p>
-         </div>
+<!-- GALLERY POST IN SERVICES -->
+
+
+
+<div class="carousel-inner" role="listbox">
+
+    <!--First slide-->
+    <div class="carousel-item active">
+
+        <div class="col-md-3 mb-3">
+            <div class="card">
+                <img class="img-fluid" src="lisa-holloway-pics/pic5.jpg" alt="Card image cap">
+            </div>
+        </div>
+
+        <div class="col-md-3 mb-3">
+            <div class="card">
+                <img class="img-fluid" src="lisa-holloway-pics/pic2.jpg" alt="Card image cap">
+            </div>
+        </div>
+
+        <div class="col-md-3 mb-3">
+            <div class="card">
+                <img class="img-fluid" src="lisa-holloway-pics/pic3.jpg" alt="Card image cap">
+            </div>
+        </div>
+
+        <div class="col-md-3 mb-3">
+            <div class="card">
+                <img class="img-fluid" src="lisa-holloway-pics/pic4.jpg" alt="Card image cap">
+            </div>
+        </div>
+
     </div>
+    <!--/.First slide-->
 
-    <script src="test.js"></script>
+    <!--Second slide-->
+    <div class="carousel-item">
 
-  </body>
-</html>
+        <div class="col-md-3 mb-3">
+            <div class="card">
+                <img class="img-fluid" src="lisa-holloway-pics/pic5.jpg" alt="Card image cap">
+            </div>
+        </div>
+
+        <div class="col-md-3 mb-3">
+            <div class="card">
+                <img class="img-fluid" src="lisa-holloway-pics/pic6.jpg" alt="Card image cap">
+            </div>
+        </div>
+
+        <div class="col-md-3 mb-3">
+            <div class="card">
+                <img class="img-fluid" src="lisa-holloway-pics/pic3.jpg" alt="Card image cap">
+            </div>
+        </div>
+
+        <div class="col-md-3 mb-3">
+            <div class="card">
+                <img class="img-fluid" src="lisa-holloway-pics/pic4.jpg" alt="Card image cap">
+            </div>
+        </div>
+
+    </div>
+    <!--/.Second slide-->
+
+</div>
+</br>
+</br>
+</br>
+<!--Controls-->
+<div class="controls-top">
+    <a class="black-text" href="#multi-item-example" data-slide="prev"><i class="fa fa-angle-left fa-3x pr-3"></i></a>
+    <a class="black-text" href="#multi-item-example" data-slide="next"><i class="fa fa-angle-right fa-3x pl-3"></i></a>
+</div>
+
+</div>
+
+
+
+
+<!-- testimonals  -->
+<section  class="module content">
+  <div class="parallax-container">
+    <!-- <h2>Client Testimonals</h2> -->
+    <p> "I have been going to Lisa for years after discovering her when I first moved to Seattle. Every haircut and color has been perfect. I leave feeling great and she always finds a way to create a style that grows out well. In addition, she is always happy to try new things that I bring her on a whim... and it always ends up looking professional and stylish.
+
+    I absolutely <strong>adore her</strong> and cannot imagine going anywhere else."</p>
+    <div style="text-align: center">
+      - Lisa D
+    </div>
+  </div>
+</section>
