--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -47,7 +47,6 @@
         </div>
       </nav>
 
-
     <section class="module parallax parallax-1" data-type="background" data-speed="10">
       <div class="parallax-container">
         <h1 class="lisa-holloway-title">Lisa Holloway</h1>
@@ -56,113 +55,68 @@
     </section>
 
 
-
-  </br>
-    </br>
-      </br>
-    </br>
-    <section>
-      <div class="" style="text-align: center">
-        Hair Gallery
-      </div>
-    </section>
     <!-- photo gallery -->
 
     <!--Carousel Wrapper-->
     <div id="multi-item-example" class="carousel slide carousel-multi-item carousel-multi-item-2" data-ride="carousel">
 
-        <!--Controls-->
-        <div class="controls-top">
-            <a class="black-text" href="#multi-item-example" data-slide="prev"><i class="fa fa-angle-left fa-3x pr-3"></i></a>
-            <a class="black-text" href="#multi-item-example" data-slide="next"><i class="fa fa-angle-right fa-3x pl-3"></i></a>
-        </div>
+
         <!--/.Controls-->
 
         <!--Slides-->
-        <div class="carousel-inner" role="listbox">
+      </br>
+      </br>
+      </br>
+      </br>
 
-            <!--First slide-->
-            <div class="carousel-item active">
-
-                <div class="col-md-3 mb-3">
-                    <div class="card">
-                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(38).jpg" alt="Card image cap">
-                    </div>
-                </div>
-
-                <div class="col-md-3 mb-3">
-                    <div class="card">
-                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(19).jpg" alt="Card image cap">
-                    </div>
-                </div>
-
-                <div class="col-md-3 mb-3">
-                    <div class="card">
-                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(42).jpg" alt="Card image cap">
-                    </div>
-                </div>
-
-                <div class="col-md-3 mb-3">
-                    <div class="card">
-                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(8).jpg" alt="Card image cap">
-                    </div>
-                </div>
-
-            </div>
-            <!--/.First slide-->
-
-            <!--Second slide-->
-            <div class="carousel-item">
-
-                <div class="col-md-3 mb-3">
-                    <div class="card">
-                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(53).jpg" alt="Card image cap">
-                    </div>
-                </div>
-
-                <div class="col-md-3 mb-3">
-                    <div class="card">
-                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(25).jpg" alt="Card image cap">
-                    </div>
-                </div>
-
-                <div class="col-md-3 mb-3">
-                    <div class="card">
-                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(47).jpg" alt="Card image cap">
-                    </div>
-                </div>
-
-                <div class="col-md-3 mb-3">
-                    <div class="card">
-                        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(26).jpg" alt="Card image cap">
-                    </div>
-                </div>
-
-            </div>
-            <!--/.Second slide-->
-
-        </div>
-
-    </div>
     <!--/.Carousel Wrapper-->
 
   <!-- photo gallery -->
 
-  <section  class="module content">
-    <div class="parallax-container">
-      <!-- <h2>Client Testimonals</h2> -->
-      <p> "I have been going to Lisa for years after discovering her when I first moved to Seattle. Every haircut and color has been perfect. I leave feeling great and she always finds a way to create a style that grows out well. In addition, she is always happy to try new things that I bring her on a whim... and it always ends up looking professional and stylish.
 
-      I absolutely <strong>adore her</strong> and cannot imagine going anywhere else."</p>
-      <div style="text-align: center">
-        - Lisa D
-      </div>
+<!-- testimonals -->
+<section class="testimonals-section">
+
+  <h3 class="customer-testimonals">
+    Customer Testimonals
+  </h3>
+
+  <section class="section-card">
+    <div class="card" style="width: 18rem; height: 20em;">
+    <div class="card-body">
+      <h5 class="card-title">Amalia</h5>
+      <h6 class="card-subtitle mb-2 text-muted"></h6>
+      <p class="card-text">I have been going to Lisa for years and I cannot express enough how incredible she is. She has been my saving grace. Been loyal for years and will continue to see her every chance I get.</p>
+    </div>
     </div>
   </section>
+
+
+</section>
+
+
+<!-- end of testimonals -->
+
+
+
+
+
   </br>
     </br>
       </br>
         </br>
+      </br>
+        </br>
+          </br>
+        </br>
+          </br>
+            </br>
+          </br>
+            </br>
+              </br>
+            </br>
+              </br>
+                </br>
 
         <!-- contact section -->
         <section class="contact">
