--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -20,6 +20,9 @@
 
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Delius+Unicase" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+
     <title>Lisa Holloway Stylist</title>
   </head>
   <body>
@@ -81,16 +84,38 @@
     Customer Testimonals
   </h3>
 
-  <section class="section-card">
+  <section class="section-card-1">
     <div class="card" style="width: 18rem; height: 20em;">
     <div class="card-body">
       <h5 class="card-title">Amalia</h5>
       <h6 class="card-subtitle mb-2 text-muted"></h6>
+      <i class="fas fa-quote-left"></i>
       <p class="card-text">I have been going to Lisa for years and I cannot express enough how incredible she is. She has been my saving grace. Been loyal for years and will continue to see her every chance I get.</p>
     </div>
-    </div>
+  </div>
   </section>
 
+  <section class="section-card-2">
+    <div class="card" style="width: 18rem; height: 20em;">
+    <div class="card-body">
+      <h5 class="card-title">Lea</h5>
+      <h6 class="card-subtitle mb-2 text-muted"></h6>
+      <i class="fas fa-quote-left"></i>
+      <p class="card-text">I have been going to Lisa for years after discovering her when I first moved to Seattle. Every haircut and color has been perfect. I leave feeling great and she always finds a way to create a style that grows out well.I absolutely adore her and cannot imagine going anywhere else.</p>
+    </div>
+  </div>
+  </section>
+
+  <section class="section-card-3">
+    <div class="card" style="width: 18rem; height: 20em;">
+    <div class="card-body">
+      <h5 class="card-title">Kim</h5>
+      <h6 class="card-subtitle mb-2 text-muted"></h6>
+      <i class="fas fa-quote-left"></i>
+      <p class="card-text">Lisa is the best!I receive compliments galore after Lisa cuts my hair - and her price is unbelievably reasonable for her level of expertise. Plus, she's down to earth, hilarious and fun to talk to.</p>
+    </div>
+  </div>
+  </section>
 
 </section>
 
