--- a/front-end/test.html
+++ b/front-end/test.html
@@ -1,93 +1,78 @@
-<!-- GALLERY POST IN SERVICES -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Test</title>
+    <link rel="stylesheet" href="test.css">
+  </head>
+  <body>
 
 
 
-<div class="carousel-inner" role="listbox">
 
-    <!--First slide-->
-    <div class="carousel-item active">
+    <section class="module parallax parallax-1" data-type="background" data-speed="10">
+      <div class="parallax-container">
+        <h1 class="lisa-holloway-title">Lisa Holloway</h1>
+        <h3 class="professional-hair-stylist" style="text-align: center">Professional Hair Stylist</h3>      </div>
+    </section>
 
-        <div class="col-md-3 mb-3">
-            <div class="card">
-                <img class="img-fluid" src="lisa-holloway-pics/pic5.jpg" alt="Card image cap">
-            </div>
-        </div>
-
-        <div class="col-md-3 mb-3">
-            <div class="card">
-                <img class="img-fluid" src="lisa-holloway-pics/pic2.jpg" alt="Card image cap">
-            </div>
-        </div>
-
-        <div class="col-md-3 mb-3">
-            <div class="card">
-                <img class="img-fluid" src="lisa-holloway-pics/pic3.jpg" alt="Card image cap">
-            </div>
-        </div>
-
-        <div class="col-md-3 mb-3">
-            <div class="card">
-                <img class="img-fluid" src="lisa-holloway-pics/pic4.jpg" alt="Card image cap">
-            </div>
-        </div>
-
+    <section  class="module content">
+    <div class="parallax-container">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor...</p>
     </div>
-    <!--/.First slide-->
+    </section>
 
-    <!--Second slide-->
-    <div class="carousel-item">
-
-        <div class="col-md-3 mb-3">
-            <div class="card">
-                <img class="img-fluid" src="lisa-holloway-pics/pic5.jpg" alt="Card image cap">
-            </div>
-        </div>
-
-        <div class="col-md-3 mb-3">
-            <div class="card">
-                <img class="img-fluid" src="lisa-holloway-pics/pic6.jpg" alt="Card image cap">
-            </div>
-        </div>
-
-        <div class="col-md-3 mb-3">
-            <div class="card">
-                <img class="img-fluid" src="lisa-holloway-pics/pic3.jpg" alt="Card image cap">
-            </div>
-        </div>
-
-        <div class="col-md-3 mb-3">
-            <div class="card">
-                <img class="img-fluid" src="lisa-holloway-pics/pic4.jpg" alt="Card image cap">
-            </div>
-        </div>
-
+    <section class="module parallax parallax-2" data-type="background" data-speed="10">
+    <div class="parallax-container">
+    <h1>Shape</h1>
     </div>
-    <!--/.Second slide-->
+    </section>
 
-</div>
-</br>
-</br>
-</br>
-<!--Controls-->
-<div class="controls-top">
-    <a class="black-text" href="#multi-item-example" data-slide="prev"><i class="fa fa-angle-left fa-3x pr-3"></i></a>
-    <a class="black-text" href="#multi-item-example" data-slide="next"><i class="fa fa-angle-right fa-3x pl-3"></i></a>
-</div>
-
-</div>
-
-
-
-
-<!-- testimonals  -->
-<section  class="module content">
-  <div class="parallax-container">
-    <!-- <h2>Client Testimonals</h2> -->
-    <p> "I have been going to Lisa for years after discovering her when I first moved to Seattle. Every haircut and color has been perfect. I leave feeling great and she always finds a way to create a style that grows out well. In addition, she is always happy to try new things that I bring her on a whim... and it always ends up looking professional and stylish.
-
-    I absolutely <strong>adore her</strong> and cannot imagine going anywhere else."</p>
-    <div style="text-align: center">
-      - Lisa D
+    <section class="module content">
+    <div class="parallax-container">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor...</p>
     </div>
-  </div>
-</section>
+    </section>
+
+    <section class="module parallax parallax-3" data-type="background" data-speed="10">
+    <div class="parallax-container">
+    <h1>Color</h1>
+    </div>
+    </section>
+
+    <section class="module content">
+    <div class="parallax-container">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor...</p>
+    </div>
+    </section>
+    <footer class="footer">
+      <div class="container-fluid bg-primary">
+        <div class="row">
+          <div class="col-xs-6 col-md-4 left">
+    <p>&copy; MySite.com</p>
+        </div>
+          <div class="col-xs-6 col-md-4 left">
+    <a href="#">Terms &amp;Conditions</a>
+    <a href="#">About Us</a>
+        </div>
+          <div class="col-xs-6 col-md-4 right">
+    <a href="#" class="btn btn-social-icon btn-twitter">
+    <span class="fa fa-twitter"></span>
+    </a>
+    <a href="#" class="btn btn-social-icon btn-facebook">
+    <span class="fa fa-facebook"></span>
+    </a>
+        <a href="#" class="btn btn-social-icon btn-instagram">
+    <span class="fa fa-instagram"></span>
+    </a>
+        </div>
+        </div>
+    </div>
+    </footer>
+
+
+  </body>
+</html>
