spacing in nav bar used bootstrap grid

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -19,7 +19,16 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- font -->
-    <link href="https://fonts.googleapis.com/css?family=Delius+Unicase" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arizonia|Calligraffitti|Crimson+Text|Great+Vibes|Handlee|Homemade+Apple|Kaushan+Script|Libre+Franklin|Meddon|Merienda|Nanum+Myeongjo|Nothing+You+Could+Do|Noto+Serif+KR|Open+Sans:300i|Pacifico|Petit+Formal+Script|Pinyon+Script|Rouge+Script|Ruthie|Satisfy|Waiting+for+the+Sunrise|Yesteryear" rel="stylesheet">
+
+
+
+
+
+
+
+
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 
@@ -34,16 +43,15 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
-
+          <ul class="navbar-nav mr-auto nav-fill w-50">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link nav-about" href="#">About </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link nav-services" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Booking</a>
+              <a class="nav-link nav-booking" href="#">Booking</a>
             </li>
           </ul>
 
@@ -58,12 +66,6 @@
         </div>
       </section>
 
-
-    <!--Carousel Wrapper-->
-    <div id="multi-item-example" class="carousel slide carousel-multi-item carousel-multi-item-2" data-ride="carousel">
-
-      </br>
-      </br>
       </br>
       </br>
 
