changed font color & style card title and paragraph in testiononals

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -74,13 +74,13 @@
 <section class="testimonals-section">
 
   <h3 class="customer-testimonals">
-    Customer Testimonals
+    Customer Testimonals...
   </h3>
 
   <section class="section-card-1">
     <div class="card" style="width: 18rem; height: 20em;">
     <div class="card-body">
-      <h5 class="card-title">Amalia</h5>
+      <h3 class="card-title" style="color: #8c7222">Amalia</h3>
       <h6 class="card-subtitle mb-2 text-muted"></h6>
       <i class="fas fa-quote-left"></i>
       <p class="card-text">I have been going to Lisa for years and I cannot express enough how incredible she is. She has been my saving grace. Been loyal for years and will continue to see her every chance I get.</p>
@@ -91,7 +91,7 @@
   <section class="section-card-2">
     <div class="card" style="width: 18rem; height: 20em;">
     <div class="card-body">
-      <h5 class="card-title">Lea</h5>
+      <h3 class="card-title" style="color: #8c7222">Lea</h3>
       <h6 class="card-subtitle mb-2 text-muted"></h6>
       <i class="fas fa-quote-left"></i>
       <p class="card-text">I have been going to Lisa for years after discovering her when I first moved to Seattle. Every haircut and color has been perfect. I leave feeling great and she always finds a way to create a style that grows out well.I absolutely adore her and cannot imagine going anywhere else.</p>
@@ -102,7 +102,7 @@
   <section class="section-card-3">
     <div class="card" style="width: 18rem; height: 20em;">
     <div class="card-body">
-      <h5 class="card-title">Kim</h5>
+      <h3 class="card-title" style="color: #8c7222">Kim</h3>
       <h6 class="card-subtitle mb-2 text-muted"></h6>
       <i class="fas fa-quote-left"></i>
       <p class="card-text">Lisa is the best!I receive compliments galore after Lisa cuts my hair - and her price is unbelievably reasonable for her level of expertise. Plus, she's down to earth, hilarious and fun to talk to.</p>
