added spacing in contact section

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -80,7 +80,7 @@
   <section class="section-card-1">
     <div class="card" style="width: 18rem; height: 20em;">
     <div class="card-body">
-      <h3 class="card-title" style="color: #8c7222">Amalia</h3>
+      <h3 class="card-title" style="color: #8c7222">Amalia</h>
       <h6 class="card-subtitle mb-2 text-muted"></h6>
       <i class="fas fa-quote-left"></i>
       <p class="card-text">I have been going to Lisa for years and I cannot express enough how incredible she is. She has been my saving grace. Been loyal for years and will continue to see her every chance I get.</p>
@@ -94,7 +94,7 @@
       <h3 class="card-title" style="color: #8c7222">Lea</h3>
       <h6 class="card-subtitle mb-2 text-muted"></h6>
       <i class="fas fa-quote-left"></i>
-      <p class="card-text">I have been going to Lisa for years after discovering her when I first moved to Seattle. Every haircut and color has been perfect. I leave feeling great and she always finds a way to create a style that grows out well.I absolutely adore her and cannot imagine going anywhere else.</p>
+      <p class="card-text">I have been going to Lisa for years after discovering her when I first moved to Seattle... I leave feeling great and she always finds a way to create a style that grows out well.I absolutely adore her and cannot imagine going anywhere else.</p>
     </div>
   </div>
   </section>
@@ -139,7 +139,8 @@
         <!-- contact section -->
         <section class="contact">
           <h1 style="text-align:center">Get In Touch</h1>
-          <div class="container">
+            <h5 style="text-align:center">We'd love to hear from you. Welcoming new cilents...</h5>
+          <div class="container contact-container">
             <div class="row">
               <div class="col-sm">
                 <i class="fa fa-address-book" aria-hidden="true"></i>
