font=awesome background color and icon uploaded

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -143,9 +143,9 @@
           <div class="container contact-container">
             <div class="row">
               <div class="col-sm">
-                <i class="fa fa-address-book" aria-hidden="true"></i>
-                address
-                <div>
+                <i class="fa fa-address-book fa-3x" aria-hidden="true"></i>
+                <div class="address">address</div>
+                <div class="address-text">
                   5400 Leary Avenue Northwest, Suite 18, Seattle, Washington 98107, United States
                 </div>
               </div>
