icons grey but haven't pushed them in the middle

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -144,22 +144,25 @@
             <div class="row">
               <div class="col-sm">
                 <i class="fa fa-address-book fa-3x" aria-hidden="true"></i>
-                <div class="address">address</div>
+                <div class="address">Address</div>
                 <div class="address-text">
-                  5400 Leary Avenue Northwest, Suite 18, Seattle, Washington 98107, United States
+                  5400 Leary Avenue Northwest Suite 18,</br>
+                  Seattle, Washington, </br>
+                  98107
                 </div>
               </div>
               <div class="col-sm">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                phone
-                <div>
+                <i class="fa fa-phone fa-3x" aria-hidden="true"></i>
+                <div class="phone">Phone</div>
+                <div class="phone-text">
 ​                 206-450-5120
                 </div>
               </div>
               <div class="col-sm">
-                <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
-                email
-                <div>
+                <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
+
+                <div class="email">Email</div>
+                <div class="email-text">
                   lisahollowayStylist@gmail.com
                 </div>
               </div>
