--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -144,7 +144,7 @@
             <div class="row">
               <div class="col-sm">
                 <i class="fa fa-address-book fa-3x" aria-hidden="true"></i>
-                <div class="address">Address</div>
+                <div class="address"><h5>Address</h5></div>
                 <div class="address-text">
                   5400 Leary Avenue Northwest Suite 18,</br>
                   Seattle, Washington, </br>
@@ -153,15 +153,14 @@
               </div>
               <div class="col-sm">
                 <i class="fa fa-phone fa-3x" aria-hidden="true"></i>
-                <div class="phone">Phone</div>
+                <div class="phone"><h5>Phone</h5></div>
                 <div class="phone-text">
 ​                 206-450-5120
                 </div>
               </div>
               <div class="col-sm">
                 <i class="fa fa-envelope fa-3x" aria-hidden="true"></i>
-
-                <div class="email">Email</div>
+                <div class="email"><h5>Email</h5></div>
                 <div class="email-text">
                   lisahollowayStylist@gmail.com
                 </div>
@@ -187,27 +186,42 @@
 
 
     <!-- footer -->
-    <footer class="footer">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-xs-6 col-md-4 left">
-            <p>&copy; 2018 by amaliaclaire</p>
-          </div>
-
-          <div class="col-xs-6 col-md-4 right">
-            <a href="#" class="btn btn-social-icon btn-twitter">
-              <span class="fa fa-twitter"></span>
-            </a>
-            <a href="#" class="btn btn-social-icon btn-facebook">
-              <span class="fa fa-facebook"></span>
-            </a>
-            <a href="#" class="btn btn-social-icon btn-instagram">
-              <span class="fa fa-instagram"></span>
-            </a>
-          </div>
-
+    <footer>
+    <div class="container-fluid bg-faded mt-5">
+      <div class="container">
+          <div class="col-md-4">
+        
+          <!-- footer column 3 end -->
         </div>
       </div>
+    </div>
+
+
+    <div class="container-fluid bg-primary py-3">
+      <div class="container">
+        <div class="row py-3">
+          <div class="col-md-9">
+            <p class="text-white">Tidsskriftet Journalen utgis av Oslos legeforening og utkommer fire ganger i året. Ettertrykk og elektronisk videredistribusjon kun tillatt etter særskilt avtale. Redaktør: Per Helge Måseide.</p>
+          </div>
+          <div class="col-md-3">
+            <div class="bg-circle-outline d-inline-block">
+              <a href="https://www.facebook.com/fagbladetjournalen/" class="text-white"><i class="fa fa-2x fa-fw fa-facebook"></i>
+  		</a>
+            </div>
+
+            <div class="bg-circle-outline d-inline-block">
+              <a href="https://twitter.com/Journalen" class="text-white">
+                <i class="fa fa-2x fa-fw fa-twitter"></i></a>
+            </div>
+
+            <div class="bg-circle-outline d-inline-block">
+              <a href="https://www.linkedin.com/company/9341247" class="text-white">
+                <i class="fa fa-2x fa-fw fa-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
 
     <!-- Optional JavaScript -->
