footer at the bottom of page

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -190,7 +190,7 @@
     <div class="container-fluid bg-faded mt-5">
       <div class="container">
           <div class="col-md-4">
-        
+
           <!-- footer column 3 end -->
         </div>
       </div>
@@ -201,22 +201,23 @@
       <div class="container">
         <div class="row py-3">
           <div class="col-md-9">
-            <p class="text-white">Tidsskriftet Journalen utgis av Oslos legeforening og utkommer fire ganger i året. Ettertrykk og elektronisk videredistribusjon kun tillatt etter særskilt avtale. Redaktør: Per Helge Måseide.</p>
+            <p class="footer-text">Tidsskriftet Journalen utgis av Oslos legeforening og utkommer fire ganger i året. Ettertrykk og elektronisk videredistribusjon kun tillatt etter særskilt avtale. Redaktør: Per Helge Måseide.</p>
           </div>
           <div class="col-md-3">
             <div class="bg-circle-outline d-inline-block">
-              <a href="https://www.facebook.com/fagbladetjournalen/" class="text-white"><i class="fa fa-2x fa-fw fa-facebook"></i>
-  		</a>
+              <a href="https://www.yelp.com/biz/lisa-holloway-hair-studio-seattle-2" class="text-white"><i class="fa fa-yelp" aria-hidden="true"></i>
+
+  		        </a>
             </div>
 
             <div class="bg-circle-outline d-inline-block">
-              <a href="https://twitter.com/Journalen" class="text-white">
-                <i class="fa fa-2x fa-fw fa-twitter"></i></a>
+              <a href="https://www.instagram.com/lisahollowaystylist/" class="text-white"><i class="fab fa-instagram">
+              </i>
             </div>
 
             <div class="bg-circle-outline d-inline-block">
-              <a href="https://www.linkedin.com/company/9341247" class="text-white">
-                <i class="fa fa-2x fa-fw fa-linkedin"></i></a>
+              <a href="https://www.facebook.com/lisa.holloway.718" class="text-white">
+                <i class="fab fa-facebook"></i></a>
             </div>
           </div>
         </div>
