--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -37,7 +37,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-fade fixed-top">
-        <a class="navbar-brand" href="#">Logo</a>
+        <a class="navbar-brand" class="logo-name">LH</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -200,26 +200,12 @@
     <div class="container-fluid bg-primary py-3">
       <div class="container">
         <div class="row py-3">
-          <div class="col-md-9">
-            <p class="footer-text">Tidsskriftet Journalen utgis av Oslos legeforening og utkommer fire ganger i året. Ettertrykk og elektronisk videredistribusjon kun tillatt etter særskilt avtale. Redaktør: Per Helge Måseide.</p>
+          <div class="col-md-12 footer-info">
+            <p class="footer-text">Lisa Holloway | 5400 Leary Avenue Northwest | Suite 18 |
+            Seattle 98107 | 206-450-5120  </p>
+            <p>&copy;	Lisa Holloway Hair Stylist | Website By amaliaclaire</p>
           </div>
-          <div class="col-md-3">
-            <div class="bg-circle-outline d-inline-block">
-              <a href="https://www.yelp.com/biz/lisa-holloway-hair-studio-seattle-2" class="text-white"><i class="fa fa-yelp" aria-hidden="true"></i>
 
-  		        </a>
-            </div>
-
-            <div class="bg-circle-outline d-inline-block">
-              <a href="https://www.instagram.com/lisahollowaystylist/" class="text-white"><i class="fab fa-instagram">
-              </i>
-            </div>
-
-            <div class="bg-circle-outline d-inline-block">
-              <a href="https://www.facebook.com/lisa.holloway.718" class="text-white">
-                <i class="fab fa-facebook"></i></a>
-            </div>
-          </div>
         </div>
       </div>
     </div>
