icons are put in middle position right

--- a/front-end/landing-page.html
+++ b/front-end/landing-page.html
@@ -187,16 +187,6 @@
 
     <!-- footer -->
     <footer>
-    <div class="container-fluid bg-faded mt-5">
-      <div class="container">
-          <div class="col-md-4">
-
-          <!-- footer column 3 end -->
-        </div>
-      </div>
-    </div>
-
-
     <div class="container-fluid bg-primary py-3">
       <div class="container">
         <div class="row py-3">
@@ -210,6 +200,7 @@
       </div>
     </div>
   </footer>
+  <!-- end of footer -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
